# language

./: .gitignore  CMakeLists.txt  README.md  language-config.cmake
include/: CMakeLists.txt  alphabets.hpp  closure.hpp  colapse.hpp  composition.hpp  concepts.hpp  define.hpp  dot.hpp  grammar.hpp  language.hpp  lexer.hpp  next.hpp  operators.hpp  parser.hpp  production.hpp  state.hpp  states.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
